--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Calculator App</title>
-		<link rel="stylesheet" href="styles.css">
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<div id="display-container">
-			<h1>0</h1>
+			<h1 id="text-display">0</h1>
 		</div>
 		<div id="button-container"></div>
+		<script src="app.js"></script>
+		<link rel="stylesheet" href="styles.css">
 	</body>
 </html>
